# dashboard-paineira

./: LSTN_650_H2blow_pC_RAMP_226Celsius_201_MERGE.csv  LSTN_650_H2blow_pC_RAMP_383Celsius_251_MERGE.csv  LSTN_650_H2blow_pC_RAMP_510Celsius_291_MERGE.csv  LSTN_650_H2blow_pC_RAMP_535Celsius_299_MERGE.csv  LSTN_650_H2blow_pC_RAMP_55Celsius_141_MERGE.csv  LSTN_650_H2blow_pC_RAMP_574Celsius_311_MERGE.csv  LSTN_650_H2blow_pC_RAMP_605Celsius_321_MERGE.csv  LSTN_650_H2blow_pC_RAMP_699Celsius_351_MERGE.csv  LSTN_650_H2blow_pC_RAMP_731Celsius_361_MERGE.csv  LSTN_650_H2blow_pC_RAMP_763Celsius_371_MERGE.csv  LSTN_650_H2blow_pC_RAMP_889Celsius_411_MERGE.csv  LSTN_650_H2blow_pC_RAMP_953Celsius_431_MERGE.csv  README.md  dashboard-paineira.py  original_notebook.ipynb  plot_interfece.py  pyproject.toml  requirements.txt  streamlit.py
data/: LSTN_650_H2blow_pC_999Celsius_445_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_447_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_449_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_451_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_453_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_455_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_457_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_459_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_461_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_463_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_465_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_467_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_469_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_471_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_473_MERGE.csv  LSTN_650_H2blow_pC_999Celsius_475_MERGE.csv  (+172 more)
